--- a/index.html
+++ b/index.html
@@ -2,53 +2,428 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8" />
-  <title>专属客服备注生成助手</title>
+  <title>专属客服备注生成助手（AI版）</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     * { box-sizing: border-box; }
-    body { margin: 0; font-family: Arial, sans-serif; background: #f3f4f6; }
-    header { background: #111827; color: #f9fafb; padding: 14px 20px; }
-    main { max-width: 950px; margin: 20px auto; padding: 10px; }
-    .card { background: #fff; border-radius: 10px; padding: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); margin-bottom: 15px; }
-    textarea, input, select { width: 100%; padding: 8px; margin-top: 5px; border-radius: 6px; border: 1px solid #ccc; }
-    .pill { display:inline-block; padding:5px 10px; margin:4px; border-radius:20px; border:1px solid #ccc; cursor:pointer; }
-    .pill.active { background:#4f46e5; color:white; }
-    button { padding:8px 15px; margin-top:10px; border:none; border-radius:20px; cursor:pointer; }
-    .btn-primary { background:#4f46e5; color:white; }
-    .btn-secondary { background:#e5e7eb; }
+    body {
+      margin: 0;
+      font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,
+        "Helvetica Neue",Arial,"PingFang SC","Microsoft YaHei",sans-serif;
+      background: #f3f4f6;
+      color: #111827;
+    }
+    header {
+      background: #111827;
+      color: #f9fafb;
+      padding: 14px 20px;
+    }
+    header h1 { font-size: 20px; margin: 0 0 4px 0; font-weight: 600; }
+    header small { font-size: 12px; opacity: 0.8; }
+
+    main { max-width: 960px; margin: 18px auto 24px; padding: 0 10px; }
+
+    .card {
+      background: #ffffff;
+      border-radius: 14px;
+      box-shadow: 0 8px 20px rgba(15,23,42,0.12);
+      padding: 16px 18px 18px;
+      margin-bottom: 14px;
+    }
+    .card-title {
+      font-size: 15px;
+      font-weight: 600;
+      margin-bottom: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .card-title span.sub {
+      font-size: 11px;
+      color: #6b7280;
+      font-weight: 400;
+    }
+
+    label {
+      font-size: 12px;
+      color: #4b5563;
+      display: block;
+      margin-bottom: 4px;
+    }
+    input[type="text"],
+    input[type="password"],
+    select,
+    textarea {
+      width: 100%;
+      border-radius: 8px;
+      border: 1px solid #d1d5db;
+      padding: 7px 9px;
+      font-size: 13px;
+      outline: none;
+      background: #f9fafb;
+      resize: vertical;
+      min-height: 34px;
+    }
+    textarea { min-height: 60px; }
+    input:focus, select:focus, textarea:focus {
+      border-color: #4f46e5;
+      box-shadow: 0 0 0 2px rgba(79,70,229,0.16);
+      background: #ffffff;
+    }
+
+    .row { display: flex; flex-wrap: wrap; gap: 10px 16px; }
+    .col-4 { flex: 0 0 220px; max-width: 260px; }
+    .col-8 { flex: 1 1 260px; }
+
+    .hint { font-size: 11px; color: #9ca3af; margin-top: 3px; }
+
+    .pill-group { display: flex; flex-wrap: wrap; gap: 6px; margin-top: 4px; }
+    .pill {
+      border-radius: 999px;
+      border: 1px solid #d1d5db;
+      padding: 4px 10px;
+      font-size: 11px;
+      cursor: pointer;
+      background: #f9fafb;
+      color: #374151;
+    }
+    .pill.active {
+      background: #4f46e5;
+      border-color: #4f46e5;
+      color: #ffffff;
+    }
+
+    .actions {
+      display: flex;
+      justify-content: flex-end;
+      gap: 8px;
+      margin-top: 10px;
+      flex-wrap: wrap;
+    }
+    button {
+      border-radius: 999px;
+      border: none;
+      padding: 7px 14px;
+      font-size: 13px;
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      gap: 4px;
+      white-space: nowrap;
+    }
+    .btn-primary { background: #4f46e5; color: #ffffff; }
+    .btn-secondary { background: #e5e7eb; color: #111827; }
+    .btn-ai { background: #16a34a; color: #ffffff; }
+
+    .output textarea {
+      font-family: Menlo,Consolas,monospace;
+      background: #020617;
+      color: #e5e7eb;
+      min-height: 160px;
+      line-height: 1.5;
+    }
+
+    .badge {
+      display: inline-block;
+      padding: 2px 6px;
+      border-radius: 999px;
+      background: #eef2ff;
+      color: #4f46e5;
+      font-size: 11px;
+      margin-left: 6px;
+    }
+
+    @media (max-width: 720px) {
+      .col-4, .col-8 { flex: 1 1 100%; max-width: 100%; }
+      header { padding: 12px 14px; }
+    }
   </style>
 </head>
 <body>
 <header>
-  <h1>专属客服备注生成助手</h1>
+  <h1>专属客服备注生成助手（AI版）</h1>
+  <small>输入用户第一句话 + 选择处理动作，用 AI 帮你生成标准四段备注。</small>
 </header>
+
 <main>
-  <div class="card">
-    <label>关联工单</label>
-    <input id="ticketId" placeholder="输入工单号">
-    <label>用户第一句话</label>
-    <textarea id="userFirstMsg"></textarea>
-  </div>
-  <div class="card">
-    <div id="actionGroup"></div>
-  </div>
-  <div class="card">
-    <textarea id="resultBox" placeholder="生成备注"></textarea>
-    <button class="btn-primary" id="btnCopy">复制备注</button>
-  </div>
+  <!-- API Key -->
+  <section class="card">
+    <div class="card-title">
+      <span>0️⃣ OpenAI API Key</span>
+      <span class="sub">只在本地浏览器使用，不会保存、不会上传到 GitHub。</span>
+    </div>
+    <label>API Key（必填才能使用 AI 功能）</label>
+    <input type="password" id="apiKey" placeholder="sk-..." />
+    <div class="hint">
+      注意：请不要把 Key 写进代码或截图分享。每位使用者用自己的 Key 即可。
+    </div>
+  </section>
+
+  <!-- 输入区 -->
+  <section class="card">
+    <div class="card-title">
+      <span>1️⃣ 填写基础信息</span>
+      <span class="sub">建议先贴用户第一句话 / 关键信息</span>
+    </div>
+    <div class="row">
+      <div class="col-4">
+        <label>关联工单（人工输入）</label>
+        <input id="ticketId" placeholder="例如：OKX-2025-1128-001" />
+      </div>
+      <div class="col-4">
+        <label>问题类型 / 菜单 <span class="badge" id="typeBadge">可自动识别</span></label>
+        <select id="issueType"></select>
+        <div class="hint" id="autoTypeHint">暂未识别，如有需要可手动选择。</div>
+      </div>
+      <div class="col-4">
+        <label>待跟进</label>
+        <select id="needFollow">
+          <option value="自动">自动判断</option>
+          <option value="是">是</option>
+          <option value="否">否</option>
+        </select>
+        <div class="hint">解释类 & 用户已理解 → 多数为「否」，升级 / 等结果 / 待补资料 → 多数为「是」。</div>
+      </div>
+    </div>
+
+    <div style="margin-top:10px;">
+      <label>用户第一句话 / 关键信息</label>
+      <textarea id="userFirstMsg" placeholder="例如：昨天提USDT到币安，一小时了还没到账，可以帮我查一下吗？"></textarea>
+      <div class="hint">
+        如复制了一整段对话，也可以贴这里，AI 会自动提炼成简短「问题描述」。
+      </div>
+    </div>
+  </section>
+
+  <!-- 处理动作选择 -->
+  <section class="card">
+    <div class="card-title">
+      <span>2️⃣ 选择本次处理动作（可多选）</span>
+      <span class="sub">将被组合成简短「处理方案」一句话</span>
+    </div>
+    <div class="pill-group" id="actionGroup"></div>
+    <div class="hint">
+      例如同时勾选「向用户索取资料 + 正常安抚 + 升级处理」，AI 会用内部话术帮你总结。
+    </div>
+  </section>
+
+  <!-- 输出区 -->
+  <section class="card output">
+    <div class="card-title">
+      <span>3️⃣ 生成备注</span>
+      <span class="sub">推荐先用 AI 生成，再人工微调</span>
+    </div>
+    <div class="actions">
+      <button class="btn-secondary" id="btnClear">清空</button>
+      <button class="btn-ai" id="btnAi">✨ 用 AI 生成备注</button>
+      <button class="btn-primary" id="btnGenerate">手动生成</button>
+    </div>
+    <textarea id="resultBox" placeholder="生成的备注会出现在这里，可再微调后复制。"></textarea>
+    <div class="actions">
+      <button class="btn-primary" id="btnCopy">复制备注</button>
+    </div>
+  </section>
 </main>
+
 <script>
-  const actions = ["已向用户索取资料","已正常安抚","已解释规则，用户理解","已升级处理，等待结果","待补充信息，暂无法判断"];
-  const actionGroup = document.getElementById("actionGroup");
-  actions.forEach(a=>{
-    const d=document.createElement("div");d.className="pill";d.innerText=a;
-    d.onclick=()=>d.classList.toggle("active");
-    actionGroup.appendChild(d);
+  // ========= 配置区 =========
+  const ISSUE_TYPES = [
+    "（不指定）","充值","提币","提币&风控","现货/买币","永续合约",
+    "期权","网格/策略","Earn/赚币","手续费/APR/收益",
+    "账户/登录/安全","投诉/升级","其他"
+  ];
+
+  const TYPE_RULES = [
+    { type: "提币", keywords: ["提币","提现","提款","转出","不到账"] },
+    { type: "充值", keywords: ["充值","充币","转入","冲币","进不来"] },
+    { type: "提币&风控", keywords: ["风控","审核","冻结","锁定","合规","安全审查"] },
+    { type: "永续合约", keywords: ["合约","强平","爆仓","保证金","杠杆","维持保证金","ADL"] },
+    { type: "手续费/APR/收益", keywords: ["apr","收益","利息","年化","手续费","费率","返佣"] },
+    { type: "网格/策略", keywords: ["网格","策略","机器人","自动加仓","现货网格","合约网格"] },
+    { type: "Earn/赚币", keywords: ["赚币","定期","活期","锁仓","赎回","理财"] },
+    { type: "账户/登录/安全", keywords: ["登录","登不进去","验证码","手机换了","账户被盗","密码","安全验证"] },
+    { type: "投诉/升级", keywords: ["投诉","不满意","我要找主管","我要升级","举报","差评"] }
+  ];
+
+  const ACTION_CONFIG = [
+    { label: "向用户索取资料（截图 / 哈希值 / 地址等）", value: "索取资料", phrase: "已向用户索取资料" },
+    { label: "正常安抚用户", value: "正常安抚", phrase: "已正常安抚" },
+    { label: "解释规则，用户理解", value: "解释规则用户理解", phrase: "已解释相关规则，用户理解" },
+    { label: "解释规则，用户暂未完全理解", value: "解释规则未完全理解", phrase: "已解释相关规则，用户暂未完全理解" },
+    { label: "指导用户操作", value: "指导操作", phrase: "已指导用户操作" },
+    { label: "升级处理，等待结果", value: "升级处理", phrase: "已升级处理，等待结果" },
+    { label: "问题已处理完成", value: "问题已处理完成", phrase: "问题已处理完成" },
+    { label: "待补充信息，暂无法判断", value: "待补充信息", phrase: "待补充信息，暂无法判断" }
+  ];
+
+  const FOLLOW_ACTIONS_YES = ["升级处理","待补充信息"];
+  const FOLLOW_ACTIONS_NO  = ["问题已处理完成","解释规则用户理解"];
+
+  // ========= 初始化 =========
+  const issueTypeEl = document.getElementById("issueType");
+  ISSUE_TYPES.forEach(t => {
+    const opt = document.createElement("option");
+    opt.value = t === "（不指定）" ? "" : t;
+    opt.textContent = t;
+    issueTypeEl.appendChild(opt);
   });
-  document.getElementById("btnCopy").onclick=()=>{
-    navigator.clipboard.writeText(document.getElementById("resultBox").value);
-    alert("已复制");
-  };
-</script>
-</body>
-</html>
+
+  const actionGroup = document.getElementById("actionGroup");
+  ACTION_CONFIG.forEach(conf => {
+    const pill = document.createElement("div");
+    pill.className = "pill";
+    pill.dataset.value = conf.value;
+    pill.textContent = conf.label;
+    actionGroup.appendChild(pill);
+  });
+
+  actionGroup.addEventListener("click", e => {
+    const pill = e.target.closest(".pill");
+    if (!pill) return;
+    pill.classList.toggle("active");
+  });
+
+  const userFirstMsgEl = document.getElementById("userFirstMsg");
+  const autoTypeHintEl = document.getElementById("autoTypeHint");
+  const typeBadgeEl = document.getElementById("typeBadge");
+
+  function autoDetectType(text) {
+    const s = (text || "").toLowerCase();
+    for (const rule of TYPE_RULES) {
+      for (const kw of rule.keywords) {
+        if (s.includes(kw.toLowerCase())) return rule.type;
+      }
+    }
+    return "";
+  }
+
+  userFirstMsgEl.addEventListener("input", () => {
+    const text = userFirstMsgEl.value;
+    const detected = autoDetectType(text);
+    if (detected && !issueTypeEl.value) {
+      issueTypeEl.value = detected;
+      autoTypeHintEl.textContent = "已根据关键词识别为：「" + detected + "」，如不准确可手动修改。";
+      typeBadgeEl.textContent = "已识别";
+    } else if (!detected && !issueTypeEl.value) {
+      autoTypeHintEl.textContent = "未识别到明显类型，请手动选择。";
+      typeBadgeEl.textContent = "可自动识别";
+    }
+  });
+
+  function buildProblemDesc(msg) {
+    const raw = (msg || "").trim();
+    if (!raw) return "";
+    const short = raw.length > 40 ? raw.slice(0, 40) + "…" : raw;
+    return "用户反馈：" + short;
+  }
+
+  function buildActionPhrase(selectedValues) {
+    if (!selectedValues.length) return "";
+    const map = {};
+    ACTION_CONFIG.forEach(c => { map[c.value] = c.phrase; });
+    return selectedValues.map(v => map[v]).filter(Boolean).join("；");
+  }
+
+  function suggestNeedFollow(selectedValues) {
+    if (!selectedValues.length) return "";
+    if (selectedValues.some(v => FOLLOW_ACTIONS_YES.includes(v))) return "是";
+    if (selectedValues.some(v => FOLLOW_ACTIONS_NO.includes(v))) return "否";
+    return "否";
+  }
+
+  // 手动生成（不走 AI）
+  document.getElementById("btnGenerate").addEventListener("click", () => {
+    const ticketId = document.getElementById("ticketId").value.trim() || "（待补充）";
+    const userMsg  = userFirstMsgEl.value.trim();
+    const issueType = issueTypeEl.value;
+    const needFollowSel = document.getElementById("needFollow").value;
+    const selectedActions = Array.from(
+      document.querySelectorAll(".pill.active")
+    ).map(p => p.dataset.value);
+
+    const desc = buildProblemDesc(userMsg) || "（待补充）";
+    const phrase = buildActionPhrase(selectedActions) || "（待补充）";
+
+    let needFollow;
+    if (needFollowSel === "是" || needFollowSel === "否") {
+      needFollow = needFollowSel;
+    } else {
+      needFollow = suggestNeedFollow(selectedActions);
+    }
+
+    const lines = [];
+    lines.push("关联工单：" + ticketId);
+    lines.push("");
+    lines.push("问题描述：" + desc + (issueType ? "（类型：" + issueType + "）" : ""));
+    lines.push("");
+    lines.push("处理方案：" + phrase);
+    lines.push("");
+    lines.push("待跟进：" + needFollow);
+
+    document.getElementById("resultBox").value = lines.join("\n");
+  });
+
+  // 清空
+  document.getElementById("btnClear").addEventListener("click", () => {
+    document.getElementById("ticketId").value = "";
+    document.getElementById("needFollow").value = "自动";
+    userFirstMsgEl.value = "";
+    document.getElementById("resultBox").value = "";
+    issueTypeEl.value = "";
+    autoTypeHintEl.textContent = "暂未识别，如有需要可手动选择。";
+    typeBadgeEl.textContent = "可自动识别";
+    document.querySelectorAll(".pill.active").forEach(p => p.classList.remove("active"));
+  });
+
+  // 复制
+  document.getElementById("btnCopy").addEventListener("click", async () => {
+    const text = document.getElementById("resultBox").value.trim();
+    if (!text) { alert("请先生成备注"); return; }
+    try {
+      await navigator.clipboard.writeText(text);
+      alert("备注已复制");
+    } catch (e) {
+      alert("复制失败，可以手动选择文本复制。");
+    }
+  });
+
+  // ========= AI 生成备注 =========
+  document.getElementById("btnAi").addEventListener("click", async () => {
+    const apiKey = document.getElementById("apiKey").value.trim();
+    if (!apiKey) {
+      alert("请先填写 OpenAI API Key");
+      return;
+    }
+
+    const ticketId = document.getElementById("ticketId").value.trim();
+    const userMsg  = userFirstMsgEl.value.trim();
+    const issueType = issueTypeEl.value;
+    const needFollowSel = document.getElementById("needFollow").value;
+    const selectedActions = Array.from(
+      document.querySelectorAll(".pill.active")
+    ).map(p => p.dataset.value);
+
+    if (!userMsg) {
+      alert("请先填写用户第一句话或关键信息");
+      return;
+    }
+
+    const actionText = selectedActions.join("、") || "无";
+
+    const systemPrompt = `
+你是交易所专属客服的内部备注助手，只负责帮助压缩和结构化「工单备注」，不是和用户对话。
+
+【必须遵守的规则】：
+1. 只能根据提供的信息进行简洁总结，不要自行推测原因，不要加入主观评价，不要延伸解释。
+2. 语言保持中立、客观，类似内部备注，而不是聊天语气。
+3. 处理方案只能使用类似以下表达的组合，不要创造花哨句式：
+   - 已向用户索取资料
+   - 已正常安抚
+   - 已解释相关规则，用户理解
+   - 已解释相关规则，用户暂未完全理解
+   - 已指导用户操作
+   - 已升级处理，等待结果
+   - 待补充信息，暂无法判断
+   - 问题已处理完成
+   如有需要，可以用顿号把多个短句串联。
+4. 问题描述只需
